# local-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.pi.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: auth.py  config.py  db.py  main.py  markdown.py  models.py  ollama.py  queries.py  templates_env.py
app/routers/: auth.py  conversations.py  messages.py  pages.py
app/templates/: base.html  index.html  login.html
app/templates/partials/: chat_pane.html  conversation_list_item.html  message_assistant.html  message_assistant_streaming.html  message_user.html  model_form.html
static/: styles.css
tests/: conftest.py  test_auth.py  test_ollama.py
